facet-diff/tests/snapshots/diff_snapshots__diff_enums_same_tuple_variant_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before─────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mStatus[39m[0m[2m::[0m[1mPending[0m[2m([0m[38;2;110;81;224m5[39m[2m)[0m [38;2;86;95;137m│[0m
[38;2;86;95;137m╰───────────────────╯[0m
[38;2;86;95;137m╭After──────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mStatus[39m[0m[2m::[0m[1mPending[0m[2m([0m[38;2;110;81;224m10[39m[2m)[0m[38;2;86;95;137m│[0m
[38;2;86;95;137m╰───────────────────╯[0m
[38;2;224;175;104m╔Diff═══════════════╗[0m
[38;2;224;175;104m║[0m[1mPending[0m [38;2;247;118;142m5[39m → [38;2;115;218;202m10[39m     [38;2;224;175;104m║[0m
[38;2;224;175;104m╚═══════════════════╝[0m
