facet-diff/tests/snapshots/diff_snapshots__diff_enums_same_tuple_variant_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before────────────╮[0m
[36m│[0mStatus::Pending(5)[36m│[0m
[36m╰──────────────────╯[0m
[32m╭After─────────────╮[0m
[32m│[0mStatus::Pending(5)[32m│[0m
[32m╰──────────────────╯[0m
[33m╔Diff══════════════╗[0m
[33m║[0m[1mPending[0m (         [33m║[0m
[33m║[0m  5               [33m║[0m
[33m║[0m)                 [33m║[0m
[33m╚══════════════════╝[0m
