facet-diff/tests/snapshots/diff_snapshots__diff_enums_struct_variant_different_field.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────────────────╮[0m
[36m│[0mDetailedStatus::Active {[36m│[0m
[36m│[0m  since: 2020,          [36m│[0m
[36m│[0m}                       [36m│[0m
[36m╰────────────────────────╯[0m
[32m╭After───────────────────╮[0m
[32m│[0mDetailedStatus::Active {[32m│[0m
[32m│[0m  since: 2024,          [32m│[0m
[32m│[0m}                       [32m│[0m
[32m╰────────────────────────╯[0m
[33m╔Diff════════════════════╗[0m
[33m║[0m[1mActive[0m {                [33m║[0m
[33m║[0m  since: [31m2020[39m → [32m2024[39m    [33m║[0m
[33m║[0m}                       [33m║[0m
[33m╚════════════════════════╝[0m
