facet-diff/tests/snapshots/diff_snapshots__diff_enums_struct_variant_same.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before────────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mDetailedStatus[39m[0m[2m::[0m[1mActive[0m[2m {[0m  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202msince[39m[2m: [0m[38;2;110;81;224m2020[39m[2m,[0m            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                         [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────────────────╯[0m
[38;2;86;95;137m╭After─────────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mDetailedStatus[39m[0m[2m::[0m[1mActive[0m[2m {[0m  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202msince[39m[2m: [0m[38;2;110;81;224m2020[39m[2m,[0m            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                         [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────────────────╯[0m
[38;2;224;175;104m╔Diff══════════════════════╗[0m
[38;2;224;175;104m║[0m[1mActive[0m[38;2;86;95;137m(structurally equal)[39m[38;2;224;175;104m║[0m
[38;2;224;175;104m╚══════════════════════════╝[0m
