facet-diff/tests/snapshots/diff_snapshots__diff_enums_tuple_variants_same_content.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│Message::Text(hello)│
╰────────────────────╯
╭After───────────────╮
│Message::Text(hello)│
╰────────────────────╯
╔Diff════════════════╗
║Text (              ║
║  hello             ║
║)                   ║
╚════════════════════╝
