facet-diff/tests/snapshots/diff_snapshots__diff_floats_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
[31m3.14[39m → [32m2.71[39m
